--- a/config/database.yml
+++ b/config/database.yml
@@ -58,6 +58,8 @@ development:
 test:
   <<: *default
   database: conexion_felina_test
+  username: postgres
+  password: postgres
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
