--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ config/master.key
 /vendor/bundle
 
 # these should all be checked in to normalize the environment:
-# Gemfile.lock, .ruby-version, .ruby-gemset
+Gemfile.lock, .ruby-version, .ruby-gemset
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
@@ -52,3 +52,6 @@ bower.json
 
 # Ignore node_modules
 node_modules/
+
+# Ignore .vs
+.vs/
