--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@storybook/react": "^3.4.10",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
+    "css-loader": "^1.0.0",
     "jest": "^23.6.0",
+    "style-loader": "^0.23.0",
     "webpack-dev-server": "2.11.2"
   },
   "scripts": {
