--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@rails/webpacker": "3.5",
     "babel-preset-react": "^6.24.1",
+    "classnames": "^2.2.6",
     "prop-types": "^15.6.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
@@ -16,7 +17,9 @@
     "@storybook/react": "^3.4.10",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
+    "css-loader": "^1.0.0",
     "jest": "^23.6.0",
+    "style-loader": "^0.23.0",
     "webpack-dev-server": "2.11.2"
   },
   "scripts": {
