--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,6 @@
 {
   "presets": [
-    [
-      "env",
+    ["env", 
       {
         "modules": false,
         "targets": {
@@ -10,9 +9,29 @@
         },
         "useBuiltIns": true
       }
-    ],
+    ], 
     "react"
   ],
+  "env": {
+    "test": {
+      "presets": [
+        [
+          "env"
+        ],
+        "react"
+      ],
+      "plugins": [
+        "syntax-dynamic-import",
+        "transform-object-rest-spread",
+        [
+          "transform-class-properties",
+          {
+            "spec": true
+          }
+        ]
+      ]
+    }
+  },
   "plugins": [
     "syntax-dynamic-import",
     "transform-object-rest-spread",
