--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ capybara-*.html
 *.orig
 rerun.txt
 pickle-email-*.html
+/storage/
 
 # TODO Comment out this rule if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
