--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ rerun.txt
 pickle-email-*.html
 /storage/
 
+package-json.lock
+yarn.lock
+
 # TODO Comment out this rule if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
 config/master.key
